[package]
name = "nuqql-matrixd-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
matrix-sdk = { version = "0.16.0", features = ["anyhow"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.23.0"
